feat: add other pages

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,17 +6,17 @@ Welcome to the OpenQuickJS Documentation!
 
 OpenQuickJS is a community-driven fork of [QuickJS](https://bellard.org/quickjs/). We welcome and encourage issues and pull requests from all users.
 
-Our motivation for creating OpenQuickJS was due to the limited openness of the official QuickJS repository [bellard/quickjs](https://github.com/bellard/quickjs). We recognized that there were numerous exceptional pull requests, both open and closed, which deserved attention.
+Our motivation for creating OpenQuickJS was due to the limited openness of the official QuickJS repository [bellard/quickjs](https://github.com/bellard/quickjs). We recognized that there were numerous exceptional [pull requests](https://github.com/bellard/quickjs/pulls), both open and closed, which deserved attention.
 
 OpenQuickJS provides us with a platform where we can take the time to review these pull requests and apply valuable patches to our version. Our approach to open source is guided by the following principles:
 
 ### 1. Embracing Modern Contribution Methods
 
-The original QuickJS repository does not accept [pull requests](https://github.com/bellard/quickjs/pulls), instead favoring a mailing list system that can be challenging for modern contributors. OpenQuickJS, on the other hand, readily accepts pull requests, making it more accessible for community involvement.
+The original QuickJS repository does not accept pull requests, instead favoring a mailing list system that can be challenging for modern contributors. OpenQuickJS, on the other hand, readily accepts pull requests, making it more accessible for community involvement.
 
 ### 2. Supporting Modern Build Tools
 
-The original QuickJS repository does not support `CMakeLists.txt`. At OpenQuickJS, we acknowledge that cmake and ninja are modern build tools that should be embraced. We have therefore made it a point to accept `CMakeLists.txt`.
+The original QuickJS repository does not support `CMakeLists.txt`. At OpenQuickJS, we acknowledge that **cmake** and **ninja** are modern build tools that should be embraced. We have therefore made it a point to accept `CMakeLists.txt`.
 
 ### 3. Ensuring Transparency
 
