refactor: move principles into head 3

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,18 +10,20 @@ Our motivation for creating OpenQuickJS was due to the limited openness of the o
 
 OpenQuickJS provides us with a platform where we can take the time to review these pull requests and apply valuable patches to our version. Our approach to open source is guided by the following principles:
 
-### 1. Embracing Modern Contribution Methods
+### Principles
+
+#### 1. Embracing Modern Contribution Methods
 
 The original QuickJS repository does not accept pull requests, instead favoring a mailing list system that can be challenging for modern contributors. OpenQuickJS, on the other hand, readily accepts pull requests, making it more accessible for community involvement.
 
-### 2. Supporting Modern Build Tools
+#### 2. Supporting Modern Build Tools
 
 The original QuickJS repository does not support `CMakeLists.txt`. At OpenQuickJS, we acknowledge that **cmake** and **ninja** are modern build tools that should be embraced. We have therefore made it a point to accept `CMakeLists.txt`.
 
-### 3. Ensuring Transparency
+#### 3. Ensuring Transparency
 
 We believe in complete transparency, which is why every commit and modification is tracked in the git history and is available for all users to view.
 
-### 4. Providing Comprehensive Documentation
+#### 4. Providing Comprehensive Documentation
 
 We offer comprehensive documentation to guide new users. Whether you're here to use the project or to contribute to its development, our documentation will provide you with the guidance you need.
