feat: add Acknowledgements section to thank bellard

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -27,3 +27,15 @@ We believe in complete transparency, which is why every commit and modification 
 #### 4. Providing Comprehensive Documentation
 
 We offer comprehensive documentation to guide new users. Whether you're here to use the project or to contribute to its development, our documentation will provide you with the guidance you need.
+
+#### 5. Prioritizing Code Maintainability
+
+OpenQuickJS places a high priority on code maintainability. Unlike the original QuickJS repository, which tends to place large amounts of code within a single C file, OpenQuickJS opts for a well-organized code structure where each section of code has its own dedicated area. This approach not only makes the codebase easier to navigate, but also simplifies the process of maintaining and updating the code.
+
+# Acknowledgements
+
+We would like to take a moment to express our deep gratitude towards [Fabrice Bellard](https://bellard.org/), the creator of the original QuickJS. His tremendous work in creating QuickJS has brought an exceptional JavaScript engine to the world, serving as the foundation upon which OpenQuickJS is built.
+
+While our project is a fork designed to address certain limitations we perceived in the original [QuickJS](https://bellard.org/quickjs/) repository, we maintain the utmost respect for Bellard's work and contributions to the field. His innovation and dedication continue to inspire us as we work to improve and expand upon QuickJS in our own way through OpenQuickJS.
+
+To Bellard, and to all who have contributed to QuickJS, we say: thank you.
