--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -32,7 +32,7 @@ We offer comprehensive documentation to guide new users. Whether you're here to 
 
 OpenQuickJS places a high priority on code maintainability. Unlike the original QuickJS repository, which tends to place large amounts of code within a single C file, OpenQuickJS opts for a well-organized code structure where each section of code has its own dedicated area. This approach not only makes the codebase easier to navigate, but also simplifies the process of maintaining and updating the code.
 
-# Acknowledgements
+## Acknowledgements
 
 We would like to take a moment to express our deep gratitude towards [Fabrice Bellard](https://bellard.org/), the creator of the original QuickJS. His tremendous work in creating QuickJS has brought an exceptional JavaScript engine to the world, serving as the foundation upon which OpenQuickJS is built.
 
