--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -38,4 +38,4 @@ We would like to take a moment to express our deep gratitude towards [Fabrice Be
 
 While our project is a fork designed to address certain limitations we perceived in the original [QuickJS](https://bellard.org/quickjs/) repository, we maintain the utmost respect for Bellard's work and contributions to the field. His innovation and dedication continue to inspire us as we work to improve and expand upon QuickJS in our own way through OpenQuickJS.
 
-To Bellard, and to all who have contributed to QuickJS, we say: thank you.
+To Bellard, and to all who have contributed to QuickJS, we say: thank you!
