--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,5 +1,11 @@
+import { Analytics } from '@vercel/analytics/react'
 import './global.css'
 
 export default function App({ Component, pageProps }) {
-  return <Component {...pageProps} />
+  return (
+    <>
+      <Component {...pageProps} />
+      <Analytics />
+    </>
+  )
 }
